# Autonomous_Driving_HADA

2D-LIDAR/: CMakeLists.txt
2D-LIDAR/LSH/src/: LSH.cpp
2D-LIDAR/doc/: OFF_local_path_planning.docx
2D-LIDAR/include/: OFF_processing.hpp  circle_approx.hpp
2D-LIDAR/src/: clustering.cpp
3D-LIDAR/: CMakeLists.txt  README.md  main.cpp  visualize_test.cpp
3D-LIDAR/doc/: 3D-LiDAR_sign_distance.docx
3D-LIDAR/include/: 3D_Lidarfunction.hpp  SetLidarParam.h
3D-LIDAR/src/: 3D_Lidarfunction.cpp  LiDAR_coordchange.cpp  SetLidarParam.cpp
OFF/: off.c  off_cluster.c
OFF/LSH/include/: LSH.hpp
OFF/include/: clustering.h
OFF/src/: OFF_processing.cpp  circle_approx.cpp
RECOGNITION_COM/: CMakeLists.txt  RECOG2CONTROL.cpp  main_sign_detection.cpp
RECOGNITION_COM/3D-LIDAR/: CMakeLists.txt
RECOGNITION_COM/3D-LIDAR/include/: 3D_Lidarfunction.hpp  LiDAR_coordchange.h
RECOGNITION_COM/3D-LIDAR/src/: 3D_Lidarfunction.cpp  SetLidarParam.cpp
RECOGNITION_COM/Camera/: CMakeLists.txt
RECOGNITION_COM/Camera/YOLO/: CMakeLists.txt  README.md
RECOGNITION_COM/Camera/YOLO/TensorRT-API/include/: Engine.cuh
RECOGNITION_COM/Camera/YOLO/include/: YOLO.cuh  cuda_kernel_funtion.cuh
RECOGNITION_COM/Camera/YOLO/src/: YOLO.cu  cuda_kernel_funtion.cu
RECOGNITION_COM/Camera/include/: CameraMainUtils.hpp  VideoWriter.hpp
RECOGNITION_COM/Camera/include/LowerCamera/: CameraLower.hpp  ComputePoints.hpp  LaneProcessing.hpp  SetCameraParam.hpp
RECOGNITION_COM/Camera/include/UpperCamera/: BoundingBoxProcessing.hpp  CameraUpper.hpp  DeliveryProcessing.hpp  TrafficLightProcessing.hpp
RECOGNITION_COM/Camera/src/: CameraMainUtils.cpp  VideoWriter.cpp
RECOGNITION_COM/Camera/src/LowerCamera/: CameraLower.cpp  ComputePoints.cpp  LaneProcessing.cpp  SetCameraParam.cpp
RECOGNITION_COM/Camera/src/UpperCamera/: BoundBoxProcessing.cpp  CameraUpper.cpp  DeliveryProcessing.cpp  TrafficLightProcessing.cpp
RECOGNITION_COM/OFF/: CMakeLists.txt
RECOGNITION_COM/OFF/include/: OFF_processing.hpp  clustering.h
RECOGNITION_COM/OFF/src/: OFF_processing.cpp  circle_approx.cpp  clustering.cpp
RECOGNITION_COM/include/: Communication2Control.h  Socket_Thread.h
RECOGNITION_COM/src/: Communication2Control.c  Socket_Thread.c
